<resources>
    <string name="facebook_app_id" translatable="false">1523115955751601</string>
    <string name="appsflyer_api_key" translatable="false">UkZnkSxPoa24iFJVkbP3Ri</string>
    <string name="app_name" translatable="false">Kotodama AI</string>

    <string name="client_token_facebook" translatable="false">b6d878f2dc98bbc23dc5e08866b78d1e</string>

    <string name="info1" translatable="false">Upload audio to create your own voice</string>
    <string name="info2" translatable="false">Convert any written text into a natural-sounding AI voice</string>
    <string name="info3" translatable="false">Transform your own voice into any style, instantly and seamlessly.</string>
    <string name="info4" translatable="false">Easily upload your audio and start creating.</string>
    <string name="info5" translatable="false">Capture your voice in seconds with one tap.</string>
    <string name="info6" translatable="false">Quickly remove any recording.</string>



    <string name="language">Language</string>
    <string name="restore">Restore</string>
    <string name="unlockPremium">Unlock Premium</string>
    <string name="generateRealisticVoices">Generate Realistic Voices</string>
    <string name="fasterVoiceProcessing">Faster Voice Processing</string>
    <string name="freeVoiceClones">Free Voice Clones</string>
    <string name="clonesAnyVoice">Clone Any Voice</string>
    <string name="allFamousVoices">All Famous Voices</string>
    <string name="unlockAllPremiumVoices">Unlock All Premium Voice</string>
    <string name="chooseYourPlan">Choose your plan</string>
    <string name="weekly">Weekly</string>
    <string name="sale_81">81 % Sale</string>
    <string name="annual">Annual</string>
    <string name="popular">Popular</string>
    <string name="unlockAllFeatures">Unlock All Features</string>
    <string name="indistinguishableAiVoices">Indistinguishable AI Voices</string>
    <string name="experienceTheFuture">Experience the Future of Voice Cloning</string>
    <string name="elevateYour">Elevate your audio with our AI voice clning, transforming text into stunningly realistic speech.</string>
    <string name="perfectForEngaging">Perfect for engaging voiceovers, experience unparalleled clarity and verstaility in every narrative</string>
    <string name="feature">Features</string>
    <string name="aiTextToSpeech">AI Text To Speech</string>
    <string name="createNatural">Create natural-sounding speech easily with our advanced text-to-speech technology. Our AI brings emotions to life, making every voice unique and expressive</string>
    <string name="voiceCloning">Voice Cloning</string>
    <string name="createPersonalized">Create personalized voice clones using Kotodama’s advanced voice cloning technology. Our AI Captures unique vocal characteristics, ensuring each clone is as expressive and authentic as the original voice.</string>
    <string name="faq">FAQ</string>
    <string name="whenWillMulti">When will multilingual service be supported?</string>
    <string name="support_multiple">Our AI Already supports multiple languages. You can simply type the text and our AI automatically understands and generates the speech for you</string>
    <string name="howDoI">How do I cancel my subscription</string>
    <string name="youCanCancelYour">You can cancel your subscription anytime without being subjected to any inquiries. Google Play Store manages all the subscriptions.</string>
    <string name="howDoIRequest">How do I request a refund?</string>
    <string name="sinceAllTransactions">Since all transactions for our app are processed through the Google Play Store, we cannot issue refunds directly. However, you can request a refund directly from Google.</string>
    <string name="rateTheApp">Rate the App</string>

    <string name="step4ReceiveFreeVoiceSlot">3. You will receive a free voice slot.</string>

    <string name="weWillGive">We Will Give You</string>
    <string name="bestOffer">Best Offer!</string>
    <string name="theOfferExpires">The Offer expires in:</string>
    <string name="off_seven">77% Off</string>

    <string name="remaining">Remaining</string>
    <string name="typeHereFor">Type here for your AI Speech!</string>
    <string name="serach">Search</string>
    <string name="all">All</string>
    <string name="trend">Trend</string>
    <string name="musicians">Musicians</string>
    <string name="actors">Actors</string>
    <string name="sports">Spoorts</string>
    <string name="ficitional">Fictional</string>
    <string name="rap">Rap</string>
    <string name="game">Game</string>
    <string name="anime">Anime</string>
    <string name="kPop">K-Pop</string>
    <string name="random">Random</string>
    <string name="create">Create</string>
    <string name="createVoice">Create Voice</string>
    <string name="new_">New</string>
    <string name="tvShows">TV-Shows</string>


    <string name="information">Information</string>
    <string name="pleaseBeAdvised">Please be advised that the characters you are presently acquiring are exclusively accessible while your subscription remains active!</string>
    <string name="done">Done</string>
    <string name="doNotShow">Do not show again.</string>


    <string name="addotionalCharacters">Additional Characters!</string>
    <string name="chacters_ten">10,000 Characters</string>
    <string name="chacters_fifty">50,000 Characters</string>
    <string name="chacters_hundred">100,000 Characters</string>
    <string name="buy">Buy</string>

    <string name="youHaveReached">You have reached the maximum number of voice clones allowed. To create a new voice clone, please purchase an additional slot to create more voice clones.</string>
    <string name="OneTime">One Time</string>


    <string name="file">Files</string>
    <string name="noFiles">No Files</string>
    <string name="goToHome">Go to home page and try out text to speech!</string>


    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>


    <string name="membership">Membership</string>
    <string name="getPremium">Get Premium</string>
    <string name="accessAllThe">Access all the features</string>
    <string name="upgrade">Upgrade</string>
    <string name="general">General</string>
    <string name="emailSupport">E-mail Support</string>
    <string name="referAnd">Refer &amp; Earn</string>
    <string name="about">About</string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="appVersion">App Version</string>


    <string name="theBest">The Best</string>
    <string name="voiceChanger">Voice Changer</string>
    <string name="cloneYour">Clone Your</string>
    <string name="ownVoice">Own Voice</string>
    <string name="soundLike">Sound Like</string>
    <string name="celebrities">Celebrities</string>
    <string name="welcomeTo">Welcome To</string>
    <string name="kotodamaAi">Kotodama AI</string>
    <string name="bestTextTo">Best Text to Speech, Voice Cloning</string>


    <string name="inviteFriends">Invite Friends!</string>
    <string name="getFreeGenerations">Get Free Generations</string>
    <string name="share_1">1. Share your code with your friends</string>
    <string name="they_2">2. They enter your code in this Page</string>
    <string name="you_3">3. You and your Friends receive free credits</string>
    <string name="userCode">User Code:</string>
    <string name="invite">Invite</string>
    <string name="enterFriendsCode">Enter Friend’s Code</string>
    <string name="enterOrPaste">Enter or paste code</string>
    <string name="paste">Paste</string>
    <string name="confirm">Confirm</string>


    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="speakAnytextAnytime">Speak Any Text, Anytime!</string>
    <string name="uploadYourVoice">Upload Your Voice</string>
    <string name="uploadOrRecordYour">Upload or record your voice.</string>
    <string name="letAiDo">Let AI Do Its Magic</string>
    <string name="kotodamaAiIsGoing">Kotodama AI is going to create a custom Voice with your recordings.</string>
    <string name="yourUniqueAI">Your Unique AI Voice is Ready!</string>
    <string name="useYourCustom">Use your custom voice and say anything!</string>
    <string name="script1">With Kotodama AI, you can easily clone your voice and use it to turn text into speech. Imagine listening to your favorite book in your own voice, or sending voice messages without needing to record every time. It\'s like having a digital version of your voice that’s always ready to go, and it still sounds natural and familiar. With Kotodama, your voice is always available when you need it, anytime, anywhere.</string>

    <string name="script2">Kotodama AI gives you multiple ways to use your voice. You can read articles, answer questions, or even create your own stories. The best part is that your voice always sounds natural, just like you’re speaking yourself. It’s never been easier to hear your own voice in an app, and the best part is, you’re in control. You decide when and how to use it, and Kotodama will make it sound just right.</string>

    <string name="script3">Imagine having a personal assistant that speaks with your own voice. With Kotodama AI, this is no longer a dream, it’s a reality! You can use your voice for responses, reading information, or simply having fun with your “voice clone.” It’s not just fun, it’s also practical, because you can use your voice anytime without recording every single sentence. With Kotodama AI, your voice is always by your side, ready to help.</string>

    <string name="uploadOrRecords">Upload or Record</string>
    <string name="goodExamples">Good Examples</string>
    <string name="clearSound">Clear sound</string>
    <string name="onePerson">One person</string>
    <string name="goodExample1">Good Example 1</string>
    <string name="goodExample2">Good Example 2</string>
    <string name="badExamples">Bad Examples</string>
    <string name="noisy">Noisy</string>
    <string name="twoOrMore">Two or more people</string>
    <string name="badExample1">Bad Example 1</string>
    <string name="badExample2">Bad Example 2</string>


    <string name="voiceSelection">Voice Selection</string>
    <string name="pleaseProvideBetween">Please provide between 30 seconds to 7 minutes of your voice.</string>
    <string name="record">Record</string>
    <string name="upload">Upload</string>
    <string name="sec_30">30 seconds to 7 Minutes</string>


    <string name="recordYourVoice">Record Your Voice</string>
    <string name="PressToStart">Press to start recording!</string>


    <string name="customize">Customize</string>
    <string name="pickAn">Pick An Avatar</string>
    <string name="exVoice">ex. Voice 1</string>

    <string name="shareKotodama">Share Kotodama</string>
    <string name="continue_">Continue</string>
    <string name="yearly">Yearly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>