<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8F8"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/backbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#1A1A1B" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:paddingHorizontal="60dp"
            android:text="@string/referAnd"
            android:textColor="#1A1A1B"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/get_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:paddingHorizontal="60dp"
            android:text="@string/getFreeGenerations"
            android:textColor="#1A1A1B"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/hands_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|end"
            android:background="@drawable/circle_hands"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/get_premium"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="202dp">



            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/playButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/handshake_" />
        </LinearLayout>

        <TextView
            android:id="@+id/test1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/share_1"
            android:textColor="#1A1A1B"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/hands_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="278dp" />
        <TextView
            android:id="@+id/test2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/they_2"
            android:textColor="#1A1A1B"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/test1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="278dp" />

        <TextView
            android:id="@+id/test3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/you_3"
            android:textColor="#1A1A1B"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/test1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            />


        <TextView
            android:id="@+id/userCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/bold"
            android:text="@string/userCode"
            android:textColor="#1A1A1B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/test1" />


        <TextView
            android:id="@+id/editText"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/copy_alt"
            android:layout_marginTop="10dp"
            android:text="hello"
            android:textSize="14sp"
            android:fontFamily="@font/medium"
            android:textColor="#1A1A1B"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:background="@drawable/radius15_bg_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userCode" />

        <TextView
            android:id="@+id/invite_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/radius15_gradient"
            android:fontFamily="@font/bold"
            android:text="@string/invite"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userCode"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="429dp" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:src="@drawable/line_"
            app:layout_constraintTop_toBottomOf="@id/editText"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            app:tint="#EDEDED" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/title"
            android:gravity="center"
            android:text="@string/enterFriendsCode"
            android:textSize="18sp"
            android:fontFamily="@font/bold"
            android:textColor="#1A1A1B"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="20dp"
            android:id="@+id/invite_code_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/radius15_bg_white"
            android:paddingStart="25sp"
            android:paddingEnd="20sp">

            <EditText
                android:id="@+id/enter_code"
                android:layout_width="257dp"
                android:layout_height="50dp"
                android:fontFamily="@font/semi_bold"
                android:hint="@string/enterOrPaste"
                android:textColor="#1A1A1B"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.47" />

            <TextView
                android:id="@+id/paste_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius11_purple"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp"
                android:text="@string/paste"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>




        <RelativeLayout
            android:id="@+id/confirmButton"
            android:background="@drawable/create_btn_inactive"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingVertical="15dp"
            android:enabled="false"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/invite_code_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Restore Button -->
            <TextView
                android:id="@+id/confirmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semi_bold"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/consirmProgressBar"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>