<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:paddingTop="40dp"
    android:layout_above="@+id/bottomNavigationView"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/backbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#424242" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/voiceSelection"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/icon_close"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#424242" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bold"
        android:text="@string/uploadOrRecords"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/light"
        android:lineHeight="18.2dp"
        android:text="@string/pleaseProvideBetween"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/recordBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_voices"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/recordBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius11_bg_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/minutes"
        app:layout_constraintEnd_toStartOf="@+id/uploadBtn"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/micro"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/record"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/uploadBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius11_bg_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recordBtn">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/send"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/upload"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/minutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/semi_bold"
        android:paddingStart="15dp"
        android:text="@string/sec_30"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/seekbar" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginBottom="20dp"
        android:max="420"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@null"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/recordBtn" />

    <TextView
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/create_btn_inactive"
        android:fontFamily="@font/extra_bold"
        android:gravity="center"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/seekbar" />

</androidx.constraintlayout.widget.ConstraintLayout>

